[gd_scene load_steps=5 format=3 uid="uid://csxwvepn0f0hc"]

[ext_resource type="Script" path="res://Scripts/CreateServer/CreateServer.gd" id="1_et7g0"]
[ext_resource type="PackedScene" uid="uid://dyjarmke2grtw" path="res://Scenes/PlayerSetup/PlayerSetup.tscn" id="1_yueid"]
[ext_resource type="PackedScene" uid="uid://dyen46lnmt8xy" path="res://Scenes/ServerSetup/ServerSetup.tscn" id="2_7y8yn"]

[sub_resource type="LabelSettings" id="LabelSettings_3fwno"]
font_size = 64

[node name="CreateServer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_et7g0")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
text = "서버생성"
label_settings = SubResource("LabelSettings_3fwno")
horizontal_alignment = 1

[node name="SetupContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayerSetup" parent="Container/SetupContainer" instance=ExtResource("1_yueid")]
layout_mode = 2
size_flags_vertical = 4

[node name="ServerSetup" parent="Container/SetupContainer" instance=ExtResource("2_7y8yn")]
layout_mode = 2
size_flags_vertical = 4

[node name="ButtonContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnCreate" type="Button" parent="Container/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "생성"

[node name="BtnCancel" type="Button" parent="Container/ButtonContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "취소"

[connection signal="pressed" from="Container/ButtonContainer/BtnCreate" to="." method="_on_btn_create_pressed"]
[connection signal="pressed" from="Container/ButtonContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
